<resources>
    <string name="app_name">InfoMed</string>
    <string name="email">Email</string>
    <string name="sign_in_to_your_account">Sign in to your account:</string>
    <string name="password">Password</string>
    <string name="continues">Continue!</string>
    <string name="infomed_logo">InfoMed Logo</string>
    <string name="welcome">Welcome</string>
    <string name="storage_your_medical_records">Storage your Medical Records</string>
    <string name="sign_in">Sign in to your account</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up new account</string>
    <string name="terms_and_conditions">By signing in, you accept our Terms and Conditions</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_settings">User settings</string>
    <string name="dasboard">Dasboard</string>
    <string name="appointement">appointement</string>
    <string name="appointments">Appointments</string>
    <string name="patient_image">patients</string>
    <string name="patients">Patients</string>
    <string name="patient_card">patient card</string>
    <string name="patients_card">Patients card</string>
    <string name="medicamente_logo">medicamente</string>
    <string name="medicamente">Medicamente</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="new_appointment">New appointment</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="no_appointment_in_the_database">There is currently no appointment in the database!</string>
    <string name="add">add</string>
    <string name="patient">Patient:</string>
    <string name="medicament">Medicament:</string>
    <string name="there_are_currently_no_patients_registered_in_the_database">There are currently no patients registered in the database!!</string>
    <string name="there_are_currently_no_patient_card_in_the_database">There are currently no patient card in the database!</string>
    <string name="there_are_currently_no_drugs_registered_in_the_database"><![CDATA[There are currently no drugs registered in the database!>]]></string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="register">Register</string>
    <string name="insert_your_personal_data">Insert your personal data</string>
    <string name="specialisation">Specialisation</string>
    <string name="add_new_medicamente">Add new medicamente</string>
    <string name="add_new_medicine">Add new medicine</string>
    <string name="name_of_the_medicine">Name of the medicine:</string>
    <string name="paracetamol">Paracetamol</string>
    <string name="name_of_category">Name of category:</string>
    <string name="painkiller">Painkiller</string>
    <string name="patient_pesel">Patient pesel:</string>
    <string name="patient_lastname">Patient lastname:</string>
    <string name="add_new_patient">Add new patient</string>
    <string name="doctors">Doctors</string>
    <string name="there_are_currently_no_illness_registered_in_the_database">there are currently no illness registered in the database</string>
    <string name="add_new_illness">Add new illness</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="change_it">Change it</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_password_to_a_new">Change password to a new</string>
    <string name="change">Change</string>
    <string name="name_of_the_illness">Name of the illness</string>
    <string name="astma">Astma</string>
    <string name="breathe">breathe</string>
    <string name="illness">Iilness</string>
    <string name="add_new_appointment">Add new appointment</string>
    <string name="there_are_currently_no_doctors_in_the_database">There are currently no doctors in the database!</string>
    <string name="add_new_doctor">Add new doctor</string>
    <string name="patient_firstname">Patient firstname</string>
    <string name="patient_address">Patient address:</string>
    <string name="patient_phone_number">Patient phone number</string>
    <string name="doctor_lastname">Doctor lastname:</string>
    <string name="doctor_firstname">Doctor firstname:</string>
    <string name="medical_specialization">Medical specialization:</string>
    <string name="sort_by_doctor_name">Sort by Doctor Name</string>
    <string name="sort_by_specialization">Sort by Specialization</string>
    <string name="sort_by_illness_name">Sort by Illness Name</string>
    <string name="sort_by_category">Sort by Category</string>
    <string name="sort_by_medicamente_name">Sort by Medicamente Name</string>
    <string name="sort_by_patient_pesel">Sort by Patient Pesel</string>
    <string name="sort_by_patient_lastname">Sort by Patient Lastname</string>
    <string name="doctor_email_com">doctor@email.com</string>
    <string name="family_medicine">Family medicine</string>
    <string name="doctor_phoneNumber">Doctor phone number</string>
    <string name="doctor_password">Doctor password</string>
    <string name="repeated_visit">Repeated visit</string>
    <string name="insert_description_of_the_visit">Insert description of the visit</string>
    <string name="save_edited_appointment">Save edited appointment</string>
    <string name="patient_temperature">Patient temperature:</string>
    <string name="patient_blood_pressure">Patient blood pressure</string>
    <string name="patient_sugar_level">Patient sugar level</string>
    <string name="generate_document">Generate document</string>
    <string name="hello">Hello,</string>
    <string name="change_your_password">Change your password</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_the_code_you_received_in_the_email">Enter the code you received in the email</string>
    <string name="insert_your_email">Insert your email</string>
    <string name="old_password">Old password</string>
    <string name="phone_number">Phone Number</string>
    <string name="doctor_email">Doctor email</string>
    <string name="_48123456789">+48123456789</string>
    <string name="add_new_consultation">Add new consultation</string>
    <string name="data_consultation">Data Consultation:</string>
    <string name="consultation_time">Consultation time:</string>
    <string name="date">2022-03-24</string>
    <string name="hour">8:00</string>
</resources>
