<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@color/backgroundlight">

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100sp"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/infomed_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#181461"
            android:text="@string/welcome"
            android:textStyle="normal"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#181461"
            android:text="@string/storage_your_medical_records"
            android:textStyle="normal"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/id_button_login"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/roundedbutton2"
            android:textColor="#ffffff"
            android:text="@string/sign_in"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#181461"
            android:text="@string/or"
            android:textStyle="normal"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            />

        <Button
            android:id="@+id/id_button_register"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedbutton"
            android:textColor="#ffffff"
            android:text="@string/sign_up"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#181461"
            android:text="@string/terms_and_conditions"
            android:textStyle="normal"
            android:textSize="10sp"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            tools:ignore="SmallSp" />


    </LinearLayout>

</LinearLayout>