<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/idlogin_container"
    android:orientation="vertical"
    android:background="@color/backgroundlight"
    android:gravity="center_horizontal"
    >

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100sp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/infomed_logo" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/change_password_to_a_new"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/idforgot_edittext_old_password"
            android:layout_width="300sp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/fields"
            android:drawableStart="@drawable/password_logo"
            android:hint="@string/old_password"
            android:inputType="textPassword"/>


        <EditText
            android:id="@+id/idforgot_edittext_new_password"
            android:layout_width="300sp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/fields"
            android:drawableStart="@drawable/password_logo"
            android:hint="@string/new_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/idforgot_edittext_confirm_new_password"
            android:layout_width="300sp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:autofillHints="password"
            android:background="@drawable/fields"
            android:drawableStart="@drawable/password_logo"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/idforgot_button_change"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/change"
        android:textColor="#ffffff"
        android:textSize="15sp" />

</LinearLayout>