<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idregister_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:background="@color/backgroundlight"
    android:gravity="center_horizontal">

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60sp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/infomed_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/idregister_edittext_email"
            android:layout_width="300sp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/fields"
            android:drawableStart="@drawable/mail_logo"
            android:hint="@string/email"
            android:paddingStart="2dp"
            tools:ignore="RtlSymmetry"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/idregister_edittext_password"
            android:layout_width="300sp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/fields"
            android:drawableStart="@drawable/password_logo"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/idregister_edittext_confirm_password"
            android:layout_width="300sp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/fields"
            android:drawableStart="@drawable/password_logo"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

    </LinearLayout>

    <Button
        android:id="@+id/idregister_button_continue"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/continues"
        android:textColor="#ffffff" />
</LinearLayout>