<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">

    <TextView android:id="@+id/iddialog_doctor_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/add_new_doctor"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/doctor_email"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="normal" />


    <EditText
        android:id="@+id/iddialog_doctor_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/doctor_email_com"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/lightgray"
        android:textSize="@dimen/input_new_note" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/doctor_lastname"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/iddialog_doctor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="Marciniak"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/lightgray"
        android:textSize="@dimen/input_new_note" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/doctor_firstname"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/iddialog_doctor_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="Kacper"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/lightgray"
        android:textSize="@dimen/input_new_note" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/medical_specialization"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="normal" />

    <Spinner
        android:id="@+id/iddoctor_spinner_specialisation"
        android:layout_width="300sp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/doctor_phoneNumber"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/iddialog_doctor_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/_48123456789"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/lightgray"
        android:textSize="@dimen/input_new_note" />


</LinearLayout>