<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">

    <TextView android:id="@+id/iddialog_consultation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/add_new_consultation"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/patient"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="normal" />

    <Spinner
        android:id="@+id/idappointment_spinner_patient"
        android:layout_width="170sp"
        android:background="@drawable/border"
        android:layout_height="40dp"
        android:spinnerMode="dropdown"
        android:overlapAnchor="false"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/data_consultation"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/iddialog_consultation_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/date"
        android:focusable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity=""
        android:fontFamily="sans-serif-medium"
        android:text="@string/consultation_time"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/iddialog_consultation_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/hour"
        android:focusable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="Diagnosis: "
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/iddialog_consultation_diagnostic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="Poisoning"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/lightgray"
        android:textSize="@dimen/input_new_note" />

</LinearLayout>